added footer section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </section>
     </main>
     <footer>
-
+        <p><small class="text-gray">All rights reserved copyright&copy;2023 startup landing page design</small></p>
     </footer>
 </body>
 </html>
